TCP server test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(multichatting)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp App.cpp App.h Server.cpp Server.h ChatException.h)
 add_executable(multichatting ${SOURCE_FILES})
