database link test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,68 @@ cmake_minimum_required(VERSION 3.6)
 project(multichatting)
 
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ljsoncpp")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ljsoncpp ")
+######################################_mysql_link###################################################
+set(MYSQLCONNECTORCPP_ROOT_DIR
+        "${MYSQLCONNECTORCPP_ROOT_DIR}"
+        CACHE
+        PATH
+        "Where to start looking for this component.")
+
+if(WIN32)
+    find_path(MYSQLCONNECTORCPP_INCLUDE_DIR
+            NAMES
+            mysql_connection.h
+            PATHS
+            "C:\\Program Files"
+            HINTS
+            ${MYSQLCONNECTORCPP_ROOT_DIR}
+            PATH_SUFFIXES
+            include)
+
+    find_library(MYSQLCONNECTORCPP_LIBRARY
+            NAMES
+            mysqlcppconn
+            mysqlcppconn-static
+            HINTS
+            ${MYSQLCONNECTORCPP_ROOT_DIR}
+            PATH_SUFFIXES
+            lib)
+
+else()
+    find_path(MYSQLCONNECTORCPP_INCLUDE_DIR
+            mysql_connection.h
+            HINTS
+            ${MYSQLCONNECTORCPP_ROOT_DIR}
+            PATH_SUFFIXES
+            include)
+
+    find_library(MYSQLCONNECTORCPP_LIBRARY
+            NAMES
+            mysqlcppconn
+            mysqlcppconn-static
+            HINTS
+            ${MYSQLCONNECTORCPP_ROOT_DIR}
+            PATH_SUFFIXES
+            lib64
+            lib)
+endif()
+
+mark_as_advanced(MYSQLCONNECTORCPP_INCLUDE_DIR MYSQLCONNECTORCPP_LIBRARY)
+
+include(FindPackageHandleStandardArgs)
+find_package_handle_standard_args(MysqlConnectorCpp
+        DEFAULT_MSG
+        MYSQLCONNECTORCPP_INCLUDE_DIR
+        MYSQLCONNECTORCPP_LIBRARY)
+
+if(MYSQLCONNECTORCPP_FOUND)
+    set(MYSQLCONNECTORCPP_INCLUDE_DIRS "${MYSQLCONNECTORCPP_INCLUDE_DIR}") # Add any dependencies here
+    set(MYSQLCONNECTORCPP_LIBRARIES "${MYSQLCONNECTORCPP_LIBRARY}") # Add any dependencies here
+    mark_as_advanced(MYSQLCONNECTORCPP_ROOT_DIR)
+endif()
+#########################################################################################
+
 set(SOURCE_FILES main.cpp App.cpp App.h Server.cpp Server.h ChatException.h User.cpp User.h CThread.cpp CThread.h UserManager.cpp UserManager.h)
 add_executable(multichatting ${SOURCE_FILES})
+target_link_libraries(multichatting  ${MYSQLCONNECTORCPP_LIBRARY})
