--- a/Client/app/src/main/AndroidManifest.xml
+++ b/Client/app/src/main/AndroidManifest.xml
@@ -11,21 +11,21 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.example.joju.client.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".ChattingActivity">
+        <activity android:name="com.example.joju.client.ChattingActivity">
             <intent-filter>
                 <action android:name="com.example.joju" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".SigninActivity">
+        <activity android:name="com.example.joju.client.SigninActivity">
             <intent-filter>
                 <action android:name="com.example.joju" />
                 <category android:name="android.intent.category.DEFAULT" />
