--- a/Client/app/src/main/AndroidManifest.xml
+++ b/Client/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Multi-Chatting"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name="com.example.joju.client.MainActivity">
@@ -32,6 +32,12 @@
             </intent-filter>
         </activity>
 
+        <activity android:name="com.example.joju.client.UserListActivity">
+            <intent-filter>
+                <action android:name="com.example.joju" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
 
     </application>
 
